# learnqt-debugdemo

./: CMakeLists.txt  DebugDemo_en_US.ts  main.cpp  main.qml
XUIKit/: CMakeLists.txt  fileutils.cpp  fileutils.h  qmldir  tomitem.cpp  tomitem.h  xuikit.qrc  xuikit_plugin.cpp  xuikit_plugin.h
XUIKit/qml/: FolderTreeView.qml
